--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Maher Al-Hassan</title>
   <meta name="description" content="Maher Hassan, also known as Maher Al Mamun, is a committed Madrasa student. Beyond his studies, he has a deep love for reading literature and enjoys watching anime. Maher beautifully balances his traditional education with his passion for stories and art.">
-  <meta property="og:image" content="assets/thumb.jpg">
-  <meta name="twitter:image" content="assets/thumb.jpg">
+  <meta property="og:image" content="https://raw.githubusercontent.com/MaxHazzan/Page/main/assets/thumb.jpg">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/MaxHazzan/Page/main/assets/thumb.jpg">
   <meta name="keywords" content="Maher Hassan">
   <meta name="author" content="Maher Al-Hassan">
   <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css" />
