--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     <div id="profile" class="w-full lg:w-3/5 rounded-lg lg:rounded-l-lg lg:rounded-r-none shadow-2xl bg-white opacity-75 mx-6 lg:mx-0 transition ease-in-out duration-500 transform">
 
       <div class="p-4 md:p-12 text-center lg:text-left">
-        <div class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover bg-center" style="background-image: url('assets/pfp.jpg')"></div>
+        <div class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover bg-center" style="background-image: url('https://graph.facebook.com/100092177763774/picture?width=512&height=512&access_token=6628568379|c1e620fa708a1d5696fb991c1bde5662')"></div>
+        <!-- FB GraphQL for synchronized profile images -->
 
         <h1 class="text-3xl font-bold pt-8 lg:pt-0">Maher Hassan</h1>
         <div class="mx-auto lg:mx-0 w-4/5 pt-3 border-b-2 border-green-500 opacity-25"></div>
