--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ I don’t really play games — I prefer diving into literature and occasionally
             <p>
               I enjoy watching action anime and reading manga. Some of my favorites include Sun Ken Rock and Origin by Boichi. I also really like reading Webtoons and novels.
             </p>
-            <p>If you check my comic entries, I usually track them on AniList (Scroll down)</p>
+            <p>You can check my manga activity below, I track them on AniList</p>
           </div>
         </section>
 
@@ -360,14 +360,14 @@ I don’t really play games — I prefer diving into literature and occasionally
       birthYear: 2006,
       socialLinks: [
         { name: "X (Twitter)", id: "twitter", url: "https://x.com/Jsux01", iconClass: "fab fa-twitter", btnClass: "btn-twitter" },
-        { name: "Facebook", id: "facebook", url: "https://www.facebook.com/jsusbinsus", iconClass: "fab fa-facebook-f", btnClass: "btn-facebook" },
+        { name: "Facebook", id: "facebook", url: "https://www.facebook.com/profile.php?id=61578279761811", iconClass: "fab fa-facebook-f", btnClass: "btn-facebook" },
         { name: "Telegram", id: "telegram", url: "https://t.me/Jsux1", iconClass: "fab fa-telegram-plane", btnClass: "btn-telegram" },
         { name: "Anilist", id: "anilist", url: "https://anilist.co/user/Jsux", iconClass: "fas fa-ghost", btnClass: "btn-anilist" }
       ],
       contactEmail: "mdjsusbinsus@gmail.com",
       projects: [
-        { name: "Starter-V2.5", description: "A Simple Telegram bot, designed for quick setup and ease of use.", url: "https://github.com/SatoX69/Starter-V2.5", aosDelay: "0" },
-        { name: "Tensor.fart", description: "A simple unofficial wrapper of tensor.art", url: "https://github.com/SatoX69/Tensor.fart", aosDelay: "100" }
+        { name: "Maz", description: "A Suite of tools for creating bots (Private)", url: "https://youtu.be/7E7CH0xlYr4", aosDelay: "0" },
+        { name: "Tensor.fart", description: "A simple unofficial wrapper of tensor.art (Deprecated, Jul 23)", url: "https://github.com/SatoX69/Tensor.fart", aosDelay: "100" }
       ],
       anilistUserId: 6482498,
       theme: {
@@ -398,52 +398,17 @@ I don’t really play games — I prefer diving into literature and occasionally
       if(currentYearFooterEl) currentYearFooterEl.textContent = currentYear;
 
 const goodfyAhhList = [
-  "Creative mind",
-  "Genius",
-  "Big brain",
-  "Smart cookie",
-  "Dream chaser",
-  "Idea machine",
-  "Bright spark",
-  "Magic vibes",
-  "Bold spirit",
-  "Epic vibes",
-  "Chill tactician",
-  "Cold intellect",
-  "Shadow mover",
-  "Solo grinder",
-  "Hidden ace",
-  "Tactical mind",
-  "Quiet storm",
-  "Night runner",
-  "Silent force",
-  "One-man army",
-  "Mind sharpener",
-  "Cool blood",
-  "Power sleeper",
-  "Calculated risk",
-  "Limit breaker",
-  "Skill freak",
-  "Battle brain",
-  "Hustle mode",
-  "Clutch master",
-  "Unseen threat",
-  "Calm chaos",
-  "Rogue spark",
-  "Solo leveler",
-  "Alpha thought",
-  "Dark strategist",
-  "Code breaker",
-  "Edge thinker",
-  "Ghost op",
-  "Clear head",
-  "Focused force",
+  "Maher",
+  "Max",
+  "Maz's Admin",
+  "sus",
   "Jsux",
   "Jsus",
   "x",
   "Anti Prophet",
   "Atheist",
-  "Zero chatter"
+  "Agnostic",
+  "Islamophobe"
 ];
 
       const typedNameEl = document.getElementById('typed-name');
@@ -709,4 +674,3 @@ fetchLogsAndEntries(config.anilistUserId);
   </script>
 </body>
 </html>
-
